service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pythonarq-service
spec:
  selector:
    run: python-arq
  type: NodePort
  ports:
  - protocol: "TCP"
    # puerto de comunicación del servicio
    port: 5000
    # puerto de comunicación (salida) del pod
    targetPort: 80
    # puerto externo (salida) del servicio, rango: 30,000 - 32,767
    nodePort: 32001
  type: LoadBalancer
